Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112968

QTextEdit hangs when large text is copied

    XMLWordPrintable

Details

    • macOS, Windows
    • 1dc88a1b5 (dev), 45327d3d4 (6.5), 659bb338f (6.6)

    Description

      When a large text is copy paste  to QTextEdit, it hangs. cant upload sample text file of size 60 mb.

      But with following tiny code if large file is copied to clipboard and pasted here hangs forever. this works with QPlainTextEdit

      int main(int argc, char *argv[])
      {
          QApplication a(argc, argv);
          QTextEdit editor;
          editor.resize(800, 600);
          editor.show();
          return a.exec();
      }
       

       

      Attachments

        For Gerrit Dashboard: QTBUG-112968
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are 2 open Gerrit changes